package system.model.questions;

public enum QuestionGroupType {

    CAT,
    SUBCAT,
    SUBSUBCAT;
}
