package system.model.questions;

public enum QuestionType {
    SINGLE_CHOICE,
    MULTIPLE_CHOICE,
    FREE_TEXT
}
