@startuml

title __QUESTIONS's Class Diagram__\n

  package system.model {
    package system.model.classes {
      package system.model.classes.questions {
        class Question {
            - id : String
            - questionTitle : String
            - questionText : String
            - questionImage : String
            - answerTexts : LinkedList<String>
            - answerImages : LinkedList<String>
            - correctAnswers : LinkedList<Boolean>
            - category : String
            - subcategory : String
            - subsubcategory : String
            - teacher : String
            ~ Question()
            ~ Question()
            + Question()
            + Question()
            + Question()
            + Question()
            + Question()
            + Question()
            + Question()
            + removeEmptyGroups()
            + changeId()
            + getId()
            + setId()
            + getQuestionType()
            + getQuestionTitle()
            + setQuestionTitle()
            + setQuestionType()
            + getQuestionText()
            + setQuestionText()
            + getQuestionImage()
            + setQuestionImage()
            + getAnswerTexts()
            + setAnswerTexts()
            + getAnswerImages()
            + setAnswerImages()
            + getCorrectAnswers()
            + setCorrectAnswers()
            + getCategory()
            + setCategory()
            + getSubcategory()
            + setSubcategory()
            + getSubsubcategory()
            + setSubsubcategory()
            + getTeacher()
            + setTeacher()
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.questions {
        class QuestionGroup {
            - id : String
            - teacher : String
            - father : String
            - grandfather : String
            - name : String
            + QuestionGroup()
            + QuestionGroup()
            + QuestionGroup()
            + QuestionGroup()
            + QuestionGroup()
            + getId()
            + setId()
            + getTeacher()
            + setTeacher()
            + getType()
            + setType()
            + getFather()
            + setFather()
            + getGrandfather()
            + setGrandfather()
            + getName()
            + setName()
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.questions {
        enum QuestionGroupType {
          CAT
          SUBCAT
          SUBSUBCAT
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.questions {
        enum QuestionType {
          SINGLE_CHOICE
          MULTIPLE_CHOICE
          FREE_TEXT
        }
      }
    }
  }
  

  Question -up-|> Serializable
  Question -up-|> Idable
  Question o-- QuestionType : questionType
  QuestionGroup -up-|> Serializable
  QuestionGroup -up-|> Idable
  QuestionGroup o-- QuestionGroupType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
